style: fixed navbar alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -98,10 +98,6 @@ footer {
     height: 40rem;
 }
 
-.carousel-border {
-    border-radius: 1rem;
-}
-
 /* font families
 font-family: 'Vesper Libre', serif;
 font-family: 'Viaoda Libre', cursive; */
